--- a/.travis.yml
+++ b/.travis.yml
@@ -2,19 +2,31 @@ sudo: required
 language: node_js
 node_js:
   - "9"
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
 cache:
   directories:
   - node_modules
+before_install:
+  - export CHROME_BIN=chromium-browser
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 install:
   - npm install -g truffle
   - npm install -g ganache-cli
   - npm install
 script:
-  - npm run lint
+  #- npm run lint
   - npm run ganache
   - sleep 5
   - truffle migrate --network development
-  - npm run test
+  - npm run test/truffle
+  - npm run unit
+  - npm run e2e
   - npm run stop
 #after_script:
 #  - npm run coverage && cat coverage/lcov.info | coveralls
