--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Simple Dapp built on top of a vue.js truffle box",
   "author": "grandfleet <studentdavidli@gmail.com>",
+  "repository": "https://github.com/FriendlyUser/Vue-Dapp.git",
   "private": true,
   "scripts": {
     "dev": "node scripts/dev-server.js",
@@ -10,7 +11,7 @@
     "build": "node scripts/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
-    "test/truffle": "truffle test test/truffle/*",
+    "test/truffle": "truffle test --network development test/truffle/*",
     "test/dapp": "npm run unit && npm run e2e",
     "test": "npm run test/truffle && npm run test/dapp",
     "ganache": "ganache-cli -p 8545 -m 'candy maple cake sugar pudding cream honey rich smooth crumble sweet treat' > /dev/null &",
@@ -18,7 +19,9 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "dotenv": "^6.0.0",
     "truffle-contract": "^3.0.0",
+    "truffle-hdwallet-provider": "0.0.3",
     "vue": "^2.4.2",
     "vue-router": "^2.7.0"
   },
@@ -79,6 +82,7 @@
     "shelljs": "^0.7.6",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
+    "solidity-docgen": "^0.1.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
