adding component documentation to repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 install:
   - npm install -g truffle
   - npm install -g ganache-cli
-  - npm install --global @vuedoc/md
+  #- npm install --global @vuedoc/md
   - npm install
 script:
   #- npm run lint
@@ -39,7 +39,7 @@ script:
   - sudo apt-get update
   - sudo apt-get -y install solc
   - ls
-  - ./vueDoc.sh
+  #- ./vueDoc.sh
   - solidity-docgen /home/travis/build/FriendlyUser/Vue-Dapp /home/travis/build/FriendlyUser/Vue-Dapp/contracts /home/travis/build/FriendlyUser/Vue-Dapp
   - cd docs
   - ls
