--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ install:
   - npm install -g ganache-cli
   #- npm install --global @vuedoc/md
   - npm install
+  - npm install bignumber.js --save-dev
 script:
   #- npm run lint
   - npm run ganache
