--- a/.travis.yml
+++ b/.travis.yml
@@ -36,22 +36,23 @@ script:
   # Skipping prompt in surge, see https://stackoverflow.com/questions/6264596/simulating-enter-keypress-in-bash-script
   - echo | ./node_modules/.bin/surge dist
   - echo "Making documentation"
-  - sudo add-apt-repository -y ppa:ethereum/ethereum
-  - sudo apt-get update
-  - sudo apt-get -y install solc
+  # Update Smart Contracts to Solidity 5.0
+  # - sudo add-apt-repository -y ppa:ethereum/ethereum
+  # - sudo apt-get update
+  # - sudo apt-get -y install solc
   #- ./vueDoc.sh
-  - solidity-docgen /home/travis/build/FriendlyUser/Vue-Dapp /home/travis/build/FriendlyUser/Vue-Dapp/contracts /home/travis/build/FriendlyUser/Vue-Dapp
-  - cd website
-  - npm install
-  - npm run build
-  - mv ./sidebars.json build/vue-dapp
-  - cd ../
+  # - solidity-docgen /home/travis/build/FriendlyUser/Vue-Dapp /home/travis/build/FriendlyUser/Vue-Dapp/contracts /home/travis/build/FriendlyUser/Vue-Dapp
+  # - cd website
+  # - npm install
+  # - npm run build
+  # - mv ./sidebars.json build/vue-dapp
+  # - cd ../
   # Consider removing docs/components
-  - rm -rf docs/components
-  - mv docs mddocs
-  - mv mddocs website/build/vue-dapp
-  - rm -rf test/truffle/TestUsers.sol
-  - rm -rf test/truffle/TestTodoList.sol
+  # - rm -rf docs/components
+  # - mv docs mddocs
+  # - mv mddocs website/build/vue-dapp
+  # - rm -rf test/truffle/TestUsers.sol
+  # - rm -rf test/truffle/TestTodoList.sol
 after_script:
   - npm run coverage && cat coverage/lcov.info | coveralls
 deploy:
